--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-21 14:33:02
+lastsearch = 2024-07-21 18:47:30
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,9 +22,9 @@ title = Effect of the COVID-19 Outbreak on the Incidence of Other ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
-match = -78.3%%
-title = Chỉ thị 18/CT-UBND 2019 xử lý vi phạm đề điều quản ...
-url = https://thuvienphapluat.vn/van-ban/Tai-nguyen-Moi-truong/Chi-thi-18-CT-UBND-2019-xu-ly-vi-pham-de-dieu-quan-ly-bai-song-bai-trieu-ven-bien-tinh-Thai-Binh-429663.aspx
+match = -82.6%%
+title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
+url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
@@ -52,9 +52,9 @@ title = List of cities in Vietnam
 url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
-match = -43.5%%
-title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqWdfS3M&sig=ACfU3U3Qg3tjWVYwOYA_GCPl3ZGgX0duNA&hl=en&sa=X&ved=2ahUKEwjp4-OIibWHAxUdEGIAHek6DzgQ6AF6BAgiEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1Ti9cWt&sig=ACfU3U1kYZCliToj_tBzRxEgGsi0jXggQA&hl=en&sa=X&ved=2ahUKEwjtjdzyh7iHAxVZD0QIHXvVDEIQ6AF6BAgrEAM
 
 [www.travelweekly.com]
 match = -87.0%%
