--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-21 16:17:28
+lastsearch = 2024-07-21 18:49:59
 
 [helloviettravel.com]
 match = -50.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = -200.0%%
+title = USA RoadTrip: Thiên đường cám dỗ - Las Vegas | Du lịch Mỹ ...
+url = https://www.youtube.com/watch?v=7TdSEX4JFdw
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -88,8 +88,8 @@ url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-
 
 [www.klook.com]
 match = -168.8%%
-title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
-url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
+title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài - Klook
+url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
 
 [dulichviet.com.vn]
 match = -206.2%%
@@ -295,4 +295,9 @@ url = https://antv.gov.vn/video/an-ninh-voi-cuoc-song-19/canh-bao-chieu-tro-so-h
 match = -200.0%%
 title = Sắp diễn ra Hội chợ du lịch quốc tế TP.HCM lần thứ 18 với ...
 url = https://vntravel.org.vn/sap-dien-ra-hoi-cho-du-lich-quoc-te-tphcm-lan-thu-18-voi-chu-de-du-lich-ben-vung-kien-tao-tuong-lai-a5009.html
+
+[www.ustraveldocs.com]
+match = -125.0%%
+title = Nộp đơn xin Visa Hoa Kỳ | Gia hạn Thị Thực
+url = https://www.ustraveldocs.com/vn_vn/vn-niv-visarenew.asp
 
