--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-21 18:17:59
+lastsearch = 2024-07-21 18:47:42
 
 [www.zillow.com]
 match = -69.2%%
@@ -47,9 +47,9 @@ title = 18 Long St, Newnan, GA 30263
 url = https://www.redfin.com/GA/Newnan/18-Long-St-30263/home/23481920
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/4DX
+match = -53.8%%
+title = Period (periodic table)
+url = https://en.wikipedia.org/wiki/Period_(periodic_table)
 
 [www.youtube.com]
 match = -276.9%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -53.8%%
-title = Jacq Gani (@gainswithjacq)
-url = https://www.instagram.com/gainswithjacq/?hl=en
+match = -61.5%%
+title = NEETI MOHAN (@neetimohan18)
+url = https://www.instagram.com/neetimohan18/?hl=en
 
 [www.mariettaga.gov]
 match = -38.5%%
@@ -555,4 +555,14 @@ url = https://www.nvfc.org/programs/national-junior-firefighter-program/
 match = -138.5%%
 title = Chattahoochee Valley Libraries: Home
 url = https://www.cvlga.org/
+
+[www.reddit.com]
+match = -315.4%%
+title = [ART] Cover-art for Volume 18 of My Clueless First Friend ...
+url = https://www.reddit.com/r/manga/comments/1e7r1cn/art_coverart_for_volume_18_of_my_clueless_first/
+
+[books.google.com]
+match = -261.5%%
+title = Proceedings of the 18th International Conference on ...
+url = https://books.google.com/books?id=c_WADwAAQBAJ&pg=PA248&lpg=PA248&dq=ga+ni+long+18&source=bl&ots=YveQdwWCOJ&sig=ACfU3U0i7IkTXTngvEeDAdFRT42BJzVDiQ&hl=en&sa=X&ved=2ahUKEwjA7Yz4h7iHAxVlkO4BHeNlADsQ6AF6BAgmEAM
 
