--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-21 15:34:17
+lastsearch = 2024-07-21 18:46:26
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfnMDtnd&sig=ACfU3U1CyfGsQQsBG40qrQKD48h_v9srrQ&hl=en&sa=X&ved=2ahUKEwipsOva3LeHAxU7rokEHW86AesQ6AF6BAgaEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfnNFoqb&sig=ACfU3U0bQd4_QEbPpQxdCL_trVYBUhPL7w&hl=en&sa=X&ved=2ahUKEwiUlv3Th7iHAxUMl-4BHQ45DNYQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
