--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-21 19:54:43
+lastsearch = 2024-07-21 20:12:37
 
 [vinatools.com]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [batdongsan.com.vn]
-match = -213.3%%
-title = Bán đất Himlam Lương Định Của, P. An Khánh Q2, MT D2 ...
-url = https://batdongsan.com.vn/ban-dat-duong-d2-phuong-an-khanh/b-himlam-luong-dinh-cua-p-khh-q2-mt-16m-4x23-15-8ty-0906997966-pr34187773
+match = -206.7%%
+title = Mua bán nhà đất tại đường Lý Chiêu Hoàng, Quận Bình ...
+url = https://batdongsan.com.vn/nha-dat-ban-duong-ly-chieu-hoang-phuong-an-lac-6/gia-tu-10-ty-den-20-ty-dt-tu-80m2-den-100m2
 
 [m.facebook.com]
 match = -193.3%%
@@ -187,9 +187,9 @@ title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
 url = https://shopee.vn/product/686340132/24951807725
 
 [www.ministop.vn]
-match = -26.7%%
-title = Danh sách tất cả cửa hàng
-url = https://www.ministop.vn/ms/all
+match = -93.3%%
+title = List of all shops | Shop Location
+url = https://www.ministop.vn/en/ms/all
 
 [austronggroup.com.vn]
 match = -66.7%%
@@ -245,4 +245,29 @@ url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 match = -253.3%%
 title = Câu lạc bộ Bóng đá: “Sáng lên giảng đường, chiều ra sân bóng”
 url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-ra-san-bong.html
+
+[sxd.dongnai.gov.vn]
+match = -160.0%%
+title = UBND TINH DONG NAI SO XAY DUNG CONG HOA XA ...
+url = https://sxd.dongnai.gov.vn/Shared Documents/3158_27-GPXD.signed.pdf
+
+[shinhan.com.vn]
+match = 0.0%%
+title = BACH HOA XANH
+url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/BACH HOA XANH - EN_compressed.pdf
+
+[m.phonhadat.net]
+match = -186.7%%
+title = Nhà MT đường số 1 KDC Lý Chiêu Hoàng, An Lạc, Bình ...
+url = https://m.phonhadat.net/ban-nha-mat-pho-binh-tan/nha-mt-duong-so-1-kdc-ly-chieu-hoang-an-lac-binh-tan-dt-4-x-18m-gia-97-ty-tl-pr15838710.htm
+
+[bidv.com.vn]
+match = -100.0%%
+title = Sheet2
+url = https://bidv.com.vn/wps/wcm/connect/c134ee41-9574-458f-b39a-6b5fb9d23f2e/List+of+location+registration+KORONAPAY.xlsx?MOD=AJPERES&CVID=noYJGO0
+
+[sxd.binhdinh.gov.vn]
+match = -33.3%%
+title = THONG BAO
+url = http://sxd.binhdinh.gov.vn/upload/files/TB -T11.PDF(1).pdf
 
