--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-21 20:35:11
+lastsearch = 2024-07-21 20:50:57
 
 [www.zillow.com]
 match = -69.2%%
@@ -565,4 +565,19 @@ url = https://www.reddit.com/r/manga/comments/1e7r1cn/art_coverart_for_volume_18
 match = -261.5%%
 title = Proceedings of the 18th International Conference on ...
 url = https://books.google.com/books?id=c_WADwAAQBAJ&pg=PA248&lpg=PA248&dq=ga+ni+long+18&source=bl&ots=YveQdwWCOJ&sig=ACfU3U0i7IkTXTngvEeDAdFRT42BJzVDiQ&hl=en&sa=X&ved=2ahUKEwjA7Yz4h7iHAxVlkO4BHeNlADsQ6AF6BAgmEAM
+
+[www.efinancialmodels.com]
+match = 0.0%%
+title = 
+url = https://www.efinancialmodels.com/stretching-spending-how-much-is-the-stretch-lab/
+
+[www.uscg.mil]
+match = -61.5%%
+title = United States Coast Guard
+url = https://www.uscg.mil/
+
+[www.catawbacountync.gov]
+match = 7.7%%
+title = Catawba County
+url = https://www.catawbacountync.gov/
 
