--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-21 20:29:49
+lastsearch = 2024-07-21 20:49:34
 
 [demxanh.com]
 match = -41.2%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/tham-trai-san-bali.html
 [tiki.vn]
 match = -141.2%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
 
 [www.lazada.vn]
 match = -158.8%%
@@ -33,8 +33,8 @@ url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
 match = -200.0%%
-title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
-url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
+title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
 
 [vn.my-best.com]
 match = -176.5%%
