--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-21 19:23:41
+lastsearch = 2024-07-21 20:46:06
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = Serggio Lanata, MD, MS
 url = https://profiles.ucsf.edu/serggio.lanata
 
 [www.ncbi.nlm.nih.gov]
-match = -136.8%%
-title = The role of hypogonadism in Klinefelter Syndrome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3955327/
+match = -168.4%%
+title = Review of influenza-associated pulmonary aspergillosis in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2022/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
