--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-21 21:44:12
+lastsearch = 2024-07-21 22:12:44
 
 [demxanh.com]
-match = 17.2%%
-title = Chiếu điều hòa cao su non đa sắc xanh dương gấu
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-duong-gau.html
+match = 44.8%%
+title = Chiếu điều hòa cao su non màu hồng đậm
+url = https://demxanh.com/chieu-cao-su-non-mau-hong.html
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632732
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
 
 [demchinhhang.com]
 match = 51.7%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [chiaki.vn]
-match = 10.3%%
-title = Chiếu Điều Hòa Tencel Latex Cao Su Non 3D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-mau-2022
+match = 13.8%%
+title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
 
 [shopee.vn]
 match = -20.7%%
