--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-21 19:25:39
+lastsearch = 2024-07-22 01:31:28
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -57,8 +57,8 @@ title = Giường phòng ngủ sáng sủa 180x200 (2 giường sinlge chung ...
 url = https://www.airbnb.com.vn/rooms/19798001
 
 [ru9.vn]
-match = -90.9%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
+match = -86.4%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
