--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-22 03:18:52
+lastsearch = 2024-07-22 03:44:57
 
 [www.maihuyencorp.com]
-match = -20.0%%
-title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
-url = https://www.maihuyencorp.com/
+match = -85.0%%
+title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
+url = https://www.maihuyencorp.com/shop
 
 [shopee.vn]
 match = -70.0%%
@@ -47,9 +47,9 @@ title = Chiếu Nhựa Thái Lan
 url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
-match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+match = 0.0%%
+title = Chiếu nhựa Hà Nội GT 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html
 
 [www.lazada.vn]
 match = 10.0%%
