--- a/images/nem-dreamland-uc-200x200x09/config.ini
+++ b/images/nem-dreamland-uc-200x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-200x200x09.html
 lastopen = 2024-06-07 01:35:16
 
 [search]
-lastsearch = 2024-07-21 18:48:33
+lastsearch = 2024-07-22 05:11:43
 
 [www.diepxuan.com]
 match = 55.6%%
@@ -57,8 +57,8 @@ title = X-Plane 11 | Magknight 787-9 v1.1 | The 787-9 Down Under ...
 url = https://m.youtube.com/watch?v=6Usm_fhKZiI
 
 [www.reddit.com]
-match = 0.0%%
-title = Problem ECN2 development
+match = -11.1%%
+title = Problem ECN2 development : r/Darkroom
 url = https://www.reddit.com/r/Darkroom/comments/105zc5o/problem_ecn2_development/
 
 [www.ephotozine.com]
@@ -90,4 +90,9 @@ url = https://diysolarforum.com/threads/california-members-nem3-0-impact-on-nem1
 match = -55.6%%
 title = Things i look forward to in Berlin - Suggestions
 url = https://forum.enlisted.net/en/t/things-i-look-forward-to-in-berlin/35598
+
+[www.steelsoldiers.com]
+match = -66.7%%
+title = WOO HOO! Original Genset filters available that fit
+url = https://www.steelsoldiers.com/threads/woo-hoo-original-genset-filters-available-that-fit.46756/
 
