--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-22 04:31:42
+lastsearch = 2024-07-22 09:48:01
 
 [demxanh.com]
 match = 3.4%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = -31.0%%
-title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [thegioidemonline.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+match = 20.7%%
+title = Chiếu điều hòa cao su non Tencel màu vàng đậm
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [shopee.vn]
 match = -20.7%%
