--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-22 08:05:17
+lastsearch = 2024-07-22 09:50:42
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -42,9 +42,9 @@ title = The Gummy Bear Song - Long English Version
 url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
-match = -215.4%%
-title = Regal Hollywood @ North I-85 Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
+match = -223.1%%
+title = Regal Hollywood - Gainesville Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [dds.georgia.gov]
 match = -284.6%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -200.0%%
-title = Ayu Gani 🐘 | Should I keep this hair for 2024?
-url = https://www.instagram.com/ganegani/p/C11X7oFSqYw/
+match = -15.4%%
+title = Ipek Gani (@ganipek)
+url = https://www.instagram.com/ganipek/
 
 [www.nebf.com]
 match = -50.0%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0460-202-16141 Size 16 Contact 16-20 Ga
-url = https://www.deutschconnectorstore.com/p-70-deutsch-0460-202-16141-contact-20-16-ga.html
+match = -253.8%%
+title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
+url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -402,9 +402,9 @@ title = Metal Weight Calculator
 url = https://www.twmetals.com/resources/calculators.html
 
 [www.reddit.com]
-match = -269.2%%
-title = The Eminence in Shadow - Episode 16 discussion : r/anime
-url = https://www.reddit.com/r/anime/comments/10f94ar/kage_no_jitsuryokusha_ni_naritakute_the_eminence/
+match = -253.8%%
+title = [DISC] Maou no Ore ga Dorei Elf wo Yome ni Shitanda ...
+url = https://www.reddit.com/r/manga/comments/dj1is9/disc_maou_no_ore_ga_dorei_elf_wo_yome_ni_shitanda/
 
 [translate.google.com]
 match = 0.0%%
