--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-22 09:12:08
+lastsearch = 2024-07-22 09:47:49
 
 [phana.com.vn]
 match = -90.9%%
@@ -12,9 +12,9 @@ title = MN-G1-Giường 1 tay quay có bô
 url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
-match = -290.9%%
-title = Giường 1m hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=giường 1m
+match = -190.9%%
+title = Giường 1,8mx2m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
 match = -290.9%%
