--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-22 01:52:42
+lastsearch = 2024-07-22 09:45:59
 
 [www.bible.com]
-match = -64.7%%
-title = Matyu 20 | TPIPNG Bible | YouVersion
-url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -123.5%%
-title = Thufingte 1-31 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
+match = -111.8%%
+title = Exodus 1-40 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -100.0%%
-title = Matthew 20:22 New American Standard Bible
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NASB
+match = -82.4%%
+title = John 20:22 New International Version
+url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
